# p2picp

./: README.md
ICRP/: CMakeLists.txt  ICRP.kdev4  main.cpp
ICRP/.kdev4/: ICRP.kdev4
RMT_ICP/: CMakeLists.txt  RMT_ICP.kdev4  main.cpp
RMT_ICP/.kdev4/: RMT_ICP.kdev4
improvedTrICP/: CMakeLists.txt  improvedTrICP.cpp  improvedTrICP.h  improvedTrICP.kdev4  main.cpp
improvedTrICP/.kdev4/: improvedTrICP.kdev4
improved_TrICP/: CMakeLists.txt  improved_TrICP.kdev4  main.cpp
improved_TrICP/.kdev4/: improved_TrICP.kdev4
picky1_icp/: CMakeLists.txt  picky1_icp.kdev4
picky1_icp/.kdev4/: picky1_icp.kdev4
picky_ICP/: CMakeLists.txt  main.cpp  picky_ICP.kdev4
picky_ICP/.kdev4/: picky_ICP.kdev4
trimmed_ICP/: CMakeLists.txt  main.cpp  trimmed_ICP.kdev4
trimmed_ICP/.kdev4/: trimmed_ICP.kdev4
trimmed_combined_R/: CMakeLists.txt  main.cpp  trimmed_combined_R.kdev4
trimmed_combined_R/.kdev4/: trimmed_combined_R.kdev4
trimmed_pick_ICP/: CMakeLists.txt  main.cpp  trimmed_pick_ICP.kdev4
trimmed_pick_ICP/.kdev4/: trimmed_pick_ICP.kdev4
vanilla_ICP/: CMakeLists.txt  main.cpp  vanilla_ICP.kdev4
vanilla_ICP/.kdev4/: vanilla_ICP.kdev4
vanilla_R_ICP/: CMakeLists.txt  main.cpp  ploterror.py  vanilla_R_ICP.kdev4
vanilla_R_ICP/.kdev4/: vanilla_R_ICP.kdev4
vanilla_combine_ picky/: CMakeLists.txt  main.cpp  vanilla_combine_ picky.kdev4
vanilla_combine_ picky/.kdev4/: vanilla_combine_ picky.kdev4
